--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <h1>Welcome To Andrews Development</h1>
     </header>
     <nav>
-        <a href="/AndrewsHouse/House/MoreAboutUs/AboutUs.html">About</a>
-        <a href="/AndrewsHouse/House/Free%20Vr%20Games/FreeVRGames.html">FreeVRGames</a>
+        <a href="/AboutUs.html">About</a>
+        <a href="/Free%20Vr%20Games/FreeVRGames.html">FreeVRGames</a>
         <a href="https://discord.gg/9UeuDYFwNq">Discord 1</a>
         <a href="https://discord.gg/K5tpDsKujM">Discord 2</a>
     </nav>
