--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <nav>
         <a href="/AboutUs.html">About</a>
-        <a href="/Free%20Vr%20Games/FreeVRGames.html">FreeVRGames</a>
+        <a href="/freevrgames/freevrgames.html">FreeVRGames</a>
         <a href="https://discord.gg/9UeuDYFwNq">Discord 1</a>
         <a href="https://discord.gg/K5tpDsKujM">Discord 2</a>
     </nav>
