--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>Welcome To Andrews Development</h1>
     </header>
     <nav>
-        <a href="/AboutUs.html">About</a>
+        <a href="/about us/aboutus.html">About</a>
         <a href="/freevrgames/freevrgames.html">FreeVRGames</a>
         <a href="https://discord.gg/9UeuDYFwNq">Discord 1</a>
         <a href="https://discord.gg/K5tpDsKujM">Discord 2</a>
